# mcp-odoo

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.test.yml  release-plz.toml
.github/workflows/: bootstrap-publish.yml  ci.yml  homebrew-bump.yml  release-plz.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  model_filter.rs  odoo_client.rs  service.rs
src/tools/: call_method.rs  create.rs  delete.rs  describe_model.rs  list_models.rs  mod.rs  read.rs  search.rs  write.rs
